--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=E:\\Other\\nure\\GL\\Docs\\Docs\\Data\\DocsDB.mdf;Integrated Security=True;Connect Timeout=30"
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=|DBFolder|\\DocsDB.mdf;Integrated Security=True;Connect Timeout=30"
   },
   "Logging": {
     "LogLevel": {
